--- a/Jersey-Store/index.html
+++ b/Jersey-Store/index.html
@@ -97,8 +97,8 @@
     <!-- END MODAL -->
   </section>
 
-  <div class="sticky-top" id="header">
-  </div>
+  <header class="sticky-top" id="header">
+  </header>
 
   <section id="content">
     <div class="banner-img">
@@ -174,19 +174,19 @@
                 <div class="col-lg-6 col-md-3 col-12">
                   <div class="product-grid3">
                     <div class="product-image3">
-                      <a href="#">
+                      <a href="javaScript:void(0)">
                         <img class="pic-1"
                           src="https://static.nike.com/a/images/t_PDP_864_v1/f_auto,b_rgb:f5f5f5,q_80/dfc69d94-8a28-4d3c-a4f6-80ef13acf1c2/air-jordan-1-mid-shoe-BpARGV.jpg">
                         <img class="pic-2"
                           src="https://static.nike.com/a/images/t_PDP_864_v1/f_auto,b_rgb:f5f5f5,q_80/00f50b7a-099c-4b85-ad87-8b467134ed52/air-jordan-1-mid-shoe-BpARGV.jpg">
                       </a>
                       <ul class="social">
-                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                        <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                        <li><a href="javaScript:void(0)"><i class="fa fa-heart"></i></a></li>
+                        <li><a href="javaScript:void(0)"><i class="fa fa-shopping-cart"></i></a></li>
                       </ul>
                     </div>
                     <div class="product-content">
-                      <h3 class="title"><a href="#">Air Jordan 1 Mid</a></h3>
+                      <h3 class="title"><a href="javaScript:void(0)">Air Jordan 1 Mid</a></h3>
                       <div class="price">
                         Rp 1,649,000
                       </div>
@@ -201,19 +201,19 @@
                   </div>
                   <div class="product-grid3">
                     <div class="product-image3">
-                      <a href="#">
+                      <a href="javaScript:void(0)">
                         <img class="pic-1"
                           src="https://static.nike.com/a/images/t_PDP_864_v1/f_auto,b_rgb:f5f5f5,q_80/e8494c3c-666d-47c3-9131-c7d73461961f/air-max-90-shoe-r5WqV3.jpg">
                         <img class="pic-2"
                           src="https://static.nike.com/a/images/t_PDP_864_v1/f_auto,b_rgb:f5f5f5,q_80/630d81b8-5f07-4736-868f-ffc97dfdd647/air-max-90-shoe-r5WqV3.jpg">
                       </a>
                       <ul class="social">
-                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                        <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                        <li><a href="javaScript:void(0)"><i class="fa fa-heart"></i></a></li>
+                        <li><a href="javaScript:void(0)"><i class="fa fa-shopping-cart"></i></a></li>
                       </ul>
                     </div>
                     <div class="product-content">
-                      <h3 class="title"><a href="#">Nike Air Max 90</a></h3>
+                      <h3 class="title"><a href="javaScript:void(0)">Nike Air Max 90</a></h3>
                       <div class="price">
                         Rp 1,438,000
                       </div>
@@ -230,7 +230,7 @@
                 <div class="col-lg-6 col-md-3 col-12">
                   <div class="product-grid3">
                     <div class="product-image3">
-                      <a href="#">
+                      <a href="javaScript:void(0)">
                         <img class="pic-1"
                           src="https://static.nike.com/a/images/t_PDP_864_v1/f_auto,b_rgb:f5f5f5,q_80/866bfce2-a1a5-48b2-8f72-29c71ecf8035/air-jordan-1-low-se-shoe-XvqDsj.jpg">
                         <img class="pic-2"
@@ -243,7 +243,7 @@
                       <span class="product-new-label">New</span>
                     </div>
                     <div class="product-content">
-                      <h3 class="title"><a href="#">Air Jordan 1 Low SE</a></h3>
+                      <h3 class="title"><a href="javaScript:void(0)">Air Jordan 1 Low SE</a></h3>
                       <div class="price">
                         Rp 1,649,000
                       </div>
@@ -265,8 +265,8 @@
                           src="https://static.nike.com/a/images/t_PDP_864_v1/f_auto,b_rgb:f5f5f5,q_80/hwo4wriixcrxswfocrea/air-max2-light-shoe-rWm3CX.jpg">
                       </a>
                       <ul class="social">
-                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                        <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                        <li><a href="javaScript:void(0)"><i class="fa fa-heart"></i></a></li>
+                        <li><a href="javaScript:void(0)"><i class="fa fa-shopping-cart"></i></a></li>
                       </ul>
                     </div>
                     <div class="product-content">
@@ -314,101 +314,6 @@
   </section>
 
   <footer>
-    <div class="mt50" id="footer" style="background-color: black">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-12 mt-4">
-            <div class="row">
-              <div class="col-lg-6 col-md-6 col-sm-12">
-                <h4>NEW YEAR DISCOUNT</h4>
-                <br>
-                <h4>SEASON PASS</h4>
-                <br>
-                <h4>BECOME A MEMBER</h4>
-                <br>
-                <h4>SITE FEEDBACK</h4>
-              </div>
-              <div class="col-lg-6 col-md-6 col-sm-12">
-                <h4>MORE INFORMATION</h4>
-                <ul>
-                  <li>
-                    Order Status
-                  </li>
-                  <li>
-                    Shipping and Delivery
-                  </li>
-                  <li>
-                    Contact Us
-                  </li>
-                  <li>
-                    Store And Branch
-                  </li>
-                </ul>
-                <h4>
-                  ABOUT US
-                </h4>
-                <ul>
-                  <li>
-                    News
-                  </li>
-                  <li>
-                    Careers
-                  </li>
-                  <li>
-                    Partners
-                  </li>
-                  <li>
-                    Investments
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 mt-4">
-            <h4>FIND US</h4>
-            <div class="float-right ml-4">
-              <img src="ASSETS/icon/instagram.png" class="img-fluid">
-            </div>
-            <div class="float-right ml-4" style="size:24px;">
-              <img src="ASSETS/icon/twitter.png">
-            </div>
-            <div class="float-right ml-4">
-              <img src="ASSETS/icon/facebook.png">
-            </div>
-            <div class="float-right">
-              <img src="ASSETS/icon/google.png">
-            </div>
-            <br>
-            <br>
-            <br>
-            <h4>SUBSCRIBE FOR LATEST NEWS AND TRENDS</h4>
-            <div class="input-group mb-3">
-              <input type="text" class="form-control rounded-lg" aria-label="Sizing example input"
-                aria-describedby="inputGroup-sizing-default">&nbsp;&nbsp;
-              <button type="button" class="btn btn-light"><b>Submit</b></button>
-            </div>
-          </div>
-
-          <div class="container mt-5">
-            <div class="row">
-              <hr>
-              <div class="col-lg-12">
-                <hr>
-                <div class="col-lg-6 md-6 sm-6 rounded float-left">
-                  <p style="color: white; font-size:10px; "> <img src="ASSETS/gambar/indonesia.png"> &nbsp;&nbsp;
-                    Indonesia&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019
-                    All Rights Reserved</p>
-                </div>
-                <div class="col-lg-6 md-6 sm-12 rounded float-left">
-                  <p class="float-right" style="color: white; font-size:10px; ">
-                    Guides&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Terms & Policy</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
   </footer>
 </body>
 
@@ -417,17 +322,14 @@
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+  crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
   integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script>
   AOS.init();
-  
-  $(function(){
-      $("#header").load("header.html"); 
-    });
 </script>
 <script type="text/javascript">
   $('.promoBanner').hover(
@@ -438,9 +340,6 @@
       $(this).removeClass('zoomIn')
     }
   )
-  
- 
-    
 </script>
 <script src="js/common.js"></script>
 
