--- a/Jersey-Store/katalog.html
+++ b/Jersey-Store/katalog.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -23,7 +24,85 @@
 </head>
 
 <body>
-    <header id="header"></header>
+    <section>
+        <div id="UpperNav">
+            <ul class="nav navbar-expand-lg bg-grey">
+                <li class="nav-item flag-icon upperitem">
+                    <p class="modal-list"><i class="fas fa-map-marker-alt"></i>&nbsp;&nbsp;&nbsp;ID</p>
+                </li>
+                <li class="nav-item upperitem">
+                    <a class="nav-link active modal-list" data-toggle="modal" data-target="#loginModal"
+                        href="modal.html">Help /
+                        Guidance</a>
+                </li>
+                <li class="nav-item upperitem">
+                    <a class="nav-link active modal-list" data-toggle="modal" data-target="#loginModal"
+                        href="modal.html">Login</a>
+                </li>
+                <li class="nav-item upperitem">
+                    <a class="nav-link modal-list" data-toggle="modal" data-target="#loginModal"
+                        href="modal.html">Register</a>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- START MODAL -->
+    <section>
+        <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header text-center">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body omb_socialButtons">
+                        <form>
+                            <div class="form-group">
+                                <div class="modal-caption text-center" style="font-family: 'Anton', sans-serif;">
+                                    ONE STOP LOGIN<br>
+                                    FOR EVERYTHING
+                                </div>
+                                <span><input type="email" class="form-control" id="exampleInputEmail1"
+                                        aria-describedby="emailHelp" placeholder="Enter email"></span>
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" id="exampleInputPassword1"
+                                    placeholder="Password">
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                                <label class="form-check-label label-caption" for="defaultCheck1">
+                                    Keep me logged in
+                                    <a href="#">
+                                        <p class=" label-caption " style="float:right;">Forget your password?</p>
+                                    </a>
+                                </label>
+                                <p class="  form-check-label label-caption text-center mt1rem ">By logging in, you agree
+                                    to our Privacy
+                                    Policy and Terms of Use</p>
+                            </div>
+                            <div class="  omb_socialButtons  mt2rem">
+                                <a href="#" class="btn btn-lg btn-block omb_btn-facebook">
+                                    <span class="hidden-xs" style="font-family: 'Anton', sans-serif;">LOG IN</span>
+                                </a>
+                                <a href="#" class="btn btn-lg btn-block omb_btn-google">
+                                    <i class="fab fa-google-plus-g">&nbsp;</i>
+                                    <span class="hidden-xs" style="font-family: 'Anton', sans-serif;">LOG IN WITH
+                                        GOOGLE</span>
+                                </a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- END MODAL -->
+    </section>
+
+    <header id="header" class="sticky-top"></header>
 
     <div class="catalogueHeader">
         <div class="row">
@@ -881,11 +960,13 @@
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
-  crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+</script>
 <script src="js/common.js"></script>
 
 
