--- a/Jersey-Store/katalog.html
+++ b/Jersey-Store/katalog.html
@@ -363,9 +363,6 @@
                         </div>
                     </div>
 
-
-
-
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title5">
@@ -413,7 +410,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
             <!-- END SIDEBAR -->
@@ -425,7 +421,7 @@
                     <div id="jersey-man">
                         <div class="catalogueCont">
                             <div class="row">
-                                <div class="col-lg-3 col-md-6 col-sm-6">
+                                <div class="col-lg-3 col-md-6 col-6">
                                     <div class="product-grid3">
                                         <div class="product-image3">
                                             <a href="#">
@@ -456,7 +452,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-3 col-md-6 col-sm-6">
+                                <div class="col-lg-3 col-md-6 col-6">
                                     <div class="product-grid3">
                                         <div class="product-image3">
                                             <a href="#">
@@ -486,7 +482,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-3 col-md-6 col-sm-6">
+                                <div class="col-lg-3 col-md-6 col-6">
                                     <div class="product-grid3">
                                         <div class="product-image3">
                                             <a href="#">
@@ -517,7 +513,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-3 col-md-6 col-sm-6">
+                                <div class="col-lg-3 col-md-6 col-6">
                                     <div class="product-grid3">
                                         <div class="product-image3">
                                             <a href="#">
@@ -550,7 +546,7 @@
                                 </div>
 
                                 <div class="row mt50">
-                                    <div class="col-lg-3 col-md-6 col-sm-6">
+                                    <div class="col-lg-3 col-md-6 col-6">
                                         <div class="product-grid3">
                                             <div class="product-image3">
                                                 <a href="#">
@@ -581,7 +577,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-3 col-md-6 col-sm-6">
+                                    <div class="col-lg-3 col-md-6 col-6">
                                         <div class="product-grid3">
                                             <div class="product-image3">
                                                 <a href="#">
@@ -610,7 +606,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-3 col-md-6 col-sm-6">
+                                    <div class="col-lg-3 col-md-6 col-6">
                                         <div class="product-grid3">
                                             <div class="product-image3">
                                                 <a href="#">
@@ -641,7 +637,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-3 col-md-6 col-sm-6">
+                                    <div class="col-lg-3 col-md-6 col-6">
                                         <div class="product-grid3">
                                             <div class="product-image3">
                                                 <a href="#">
@@ -675,7 +671,7 @@
                                 </div>
 
                                 <div class="row mt50">
-                                    <div class="col-lg-3 col-md-6 col-sm-6">
+                                    <div class="col-lg-3 col-md-6 col-6">
                                         <div class="product-grid3">
                                             <div class="product-image3">
                                                 <a href="#">
@@ -707,7 +703,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-3 col-md-6 col-sm-6">
+                                    <div class="col-lg-3 col-md-6 col-6">
                                         <div class="product-grid3">
                                             <div class="product-image3">
                                                 <a href="#">
@@ -736,7 +732,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-3 col-md-6 col-sm-6">
+                                    <div class="col-lg-3 col-md-6 col-6">
                                         <div class="product-grid3">
                                             <div class="product-image3">
                                                 <a href="#">
@@ -767,7 +763,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-3 col-md-6 col-sm-6">
+                                    <div class="col-lg-3 col-md-6 col-6">
                                         <div class="product-grid3">
                                             <div class="product-image3">
                                                 <a href="#">
@@ -802,7 +798,7 @@
                                 </div>
 
                                 <div class="row mt50">
-                                    <div class="col-lg-3 col-md-6 col-sm-6">
+                                    <div class="col-lg-3 col-md-6 col-6">
                                         <div class="product-grid3">
                                             <div class="product-image3">
                                                 <a href="#">
@@ -833,7 +829,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-3 col-md-6 col-sm-6">
+                                    <div class="col-lg-3 col-md-6 col-6">
                                         <div class="product-grid3">
                                             <div class="product-image3">
                                                 <a href="#">
@@ -862,7 +858,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-3 col-md-6 col-sm-6">
+                                    <div class="col-lg-3 col-md-6 col-6">
                                         <div class="product-grid3">
                                             <div class="product-image3">
                                                 <a href="#">
@@ -893,7 +889,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-3 col-md-6 col-sm-6">
+                                    <div class="col-lg-3 col-md-6 col-6">
                                         <div class="product-grid3">
                                             <div class="product-image3">
                                                 <a href="#">
@@ -925,9 +921,6 @@
                                         </div>
                                     </div>
                                 </div>
-
-
-
                             </div>
                         </div>
                     </div>
@@ -947,11 +940,8 @@
                         </li>
                     </ul>
                 </nav>
-
-
             </div>
         </div>
-
         <footer></footer>
 </body>
 
