--- a/Jersey-Store/katalog.html
+++ b/Jersey-Store/katalog.html
@@ -579,7 +579,7 @@
                                                         src="https://static.nike.com/a/images/t_PDP_864_v1/f_auto,b_rgb:f5f5f5,q_80/a3e97aeb-4f4a-4ca0-92d2-3f6fd598be47/atletico-de-madrid-2020-21-stadium-home-football-shirt-J20RwB.jpg">
                                                 </a>
                                                 <ul class="social">
-                                                    <li><a href="#"><i class="fa fa-heart"></i></a></li>
+                                                    <li><a href="javascript0void"><i class="fa fa-heart"></i></a></li>
                                                     <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                                                 </ul>
                                                 <span class="product-new-label">New</span>
