--- a/Jersey-Store/katalog.html
+++ b/Jersey-Store/katalog.html
@@ -127,7 +127,7 @@
         <div class="container">
             <div class="row">
                 <!-- START SIDEBAR -->
-                <div class="col-lg-2 col-md-3 sp-none">
+                <div class="col-lg-2 col-md-3">
                 </div>
                 <!-- END SIDEBAR -->
 
