--- a/Jersey-Store/katalog.html
+++ b/Jersey-Store/katalog.html
@@ -124,7 +124,7 @@
 
         </div>
 
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <!-- START SIDEBAR -->
                 <div id="sidebar" class="col-lg-2 col-md-3 sp-none">
