--- a/Jersey-Store/index.html
+++ b/Jersey-Store/index.html
@@ -117,55 +117,67 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-lg-2 col-md-6 col-6 mt-2" align="center">
-          <div class="cat-content myfilter">
-            <img src="https://img.uefa.com/imgml/TP/players/1/2023/324x324/250084709.jpg" alt="">
-            <p class="caption">MEN</p>
-          </div>
+          <a href="katalog.html">
+            <div class="cat-content myfilter">
+              <img src="https://img.uefa.com/imgml/TP/players/1/2023/324x324/250084709.jpg" alt="">
+              <p class="caption">MEN</p>
+            </div>
+          </a>
         </div>
 
         <div class="col-lg-2 col-md-6 col-6 mt-2" align="center">
-          <div class="cat-content myfilter">
-            <img src="https://img.uefa.com/imgml/TP/players/39/2023/324x324/1907368.jpg" alt="">
-            <p class="caption">WOMEN</p>
-          </div>
+          <a href="katalog-women.html">
+            <div class="cat-content myfilter">
+              <img src="https://img.uefa.com/imgml/TP/players/39/2023/324x324/1907368.jpg" alt="">
+              <p class="caption">WOMEN</p>
+            </div>
+          </a>
         </div>
 
         <div class="col-lg-2 col-md-6 col-6 mt-2" align="center">
-          <div class="cat-content myfilter">
-            <img
-              src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/6de5e6a6913c4b84bac2aeeb0131ba70_9366/Camo_Allover_Print_Pullover_Hoodie_Blue_GA8001_41_detail.jpg"
-              alt="">
-            <p class="caption">KIDS</p>
-          </div>
+          <a href="">
+            <div class="cat-content myfilter">
+              <img
+                src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/6de5e6a6913c4b84bac2aeeb0131ba70_9366/Camo_Allover_Print_Pullover_Hoodie_Blue_GA8001_41_detail.jpg"
+                alt="">
+              <p class="caption">KIDS</p>
+          </a>
         </div>
+      </div>
 
-        <div class="col-lg-2 col-md-6 col-6 mt-2" align="center">
+      <div class="col-lg-2 col-md-6 col-6 mt-2" align="center">
+        <a href="katalog-sports.html">
           <div class="cat-content myfilter">
             <img
               src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/ddd2cc87495145a78947ae4a00fa85bc_9366/Studio_Lounge_Fleece_Hoodie_Beige_HC5881_41_detail.jpg"
               alt="">
             <p class="caption">HOODIES</p>
           </div>
-        </div>
+        </a>
+      </div>
 
-        <div class="col-lg-2 col-md-6 col-6 mt-2" align="center">
+      <div class="col-lg-2 col-md-6 col-6 mt-2" align="center">
+        <a href="shoes.html">
           <div class="cat-content myfilter">
             <img
               src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/bb21eb8a74e64fe09338aed300ce75ad_9366/Samba_OG_Shoes_Orange_HP7898_01_standard.jpg"
               alt="">
             <p class="caption">SHOES</p>
           </div>
-        </div>
+        </a>
+      </div>
 
-        <div class="col-lg-2 col-md-6 col-6 mt-2" align="center">
+      <div class="col-lg-2 col-md-6 col-6 mt-2" align="center">
+        <a href="katalog-sports.html">
           <div class="cat-content myfilter">
             <img
               src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/4e9f4bf4ae664b0798d4ae6201337d82_9366/Al_Rihla_League_Ball_White_H57791_01_standard.jpg"
               alt="">
             <p class="caption">GEAR</p>
           </div>
-        </div>
+        </a>
       </div>
+    </div>
     </div>
 
     <section>
