--- a/Jersey-Store/index.html
+++ b/Jersey-Store/index.html
@@ -97,9 +97,9 @@
     <!-- END MODAL -->
   </section>
 
-  <section id="header">
+  <header class="sticky-top" id="header">
     <!--#include virtual="/component/header.shtml" -->
-  </section>
+  </header>
 
   <section id="content">
     <div class="banner-img">
