--- a/Jersey-Store/index.html
+++ b/Jersey-Store/index.html
@@ -98,6 +98,105 @@
   </section>
 
   <header class="sticky-top" id="header">
+    <div id="header">
+      <nav id="logo" class="navbar navbar-expand-lg navbar-light sticky-top">
+        <div class="container-fluid">
+          <a class="navbar-brand brand-black" href="#" style="font-family: 'Norican', cursive; font-size: 30px;">Jersey
+            Store</a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link sans-serif" href="index.html">HOME</i></a>
+              <li class="nav-item  ">
+                <a class="nav-link sans-serif dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false"> KATALOG<span class="sr-only">(current)</span></a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item current" href="katalog.html">MEN'S JERSEY</a>
+                  <a class="dropdown-item" href="#">WOMEN'S JERSEY</a>
+                  <a class="dropdown-item" href="#">SPORTSWEAR</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link sans-serif" href="katalog.html">CUSTOMIZE</i></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link sans-serif" href="about.html">ABOUT<span class="sr-only">(current)</span></a>
+              </li>
+            </ul>
+          </div>
+          <div class="row">
+            <ul class="nav-icons row">
+              <li id="cart" class="col-lg-4 col-6">
+                <a href="javaScript:void(0)"><i class="fa fa-shopping-cart">
+                    <p class="notif"><span class="counter">4</span></p>
+                  </i></a>
+              </li>
+              <li id="wishlist" class="col-lg-4 col-6">
+                <a href="javaScript:void(0)"><i class="fa fa-heart">
+                    <p class="notif"><span class="counter">2</span></p>
+                  </i></a>
+              </li>
+              <li id="login" class="col-lg-4 sp-none">
+                <a href="modal.html" data-toggle="modal" data-target="#loginModal"><i class="fa fa-user"></i></a>
+              </li>
+            </ul>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </div>
+          <div class="overlay hide"></div>
+          <div id="cartWindow" class="sideProduct hide">
+            <div class="top">
+              <button class="closeButton">
+                <i class="fas fa-times-circle closeIcon"></i>
+              </button>
+              <h3>Shopping Cart</h3>
+            </div>
+            <ul id="buyItems">
+              <h4 class="empty">Your shopping cart is empty</h4>
+              <!-- <li class="buyItem">
+                  <img src="Images/producs-images/Mobiles/galaxynote10.png">
+                  <div>
+                    <h5>Products Name</h5>
+                    <h6>$199</h6>
+                    <div>
+                      <button>-</button>
+                      <span class="countOfProduct">1</span>
+                      <button>+</button>
+                    </div>
+                  </div>
+                </li> -->
+            </ul>
+            <button class="btn checkout hidden">Check out</button>
+          </div>
+          <div id="wishWindow" class="sideProduct hide">
+            <div class="top">
+              <button class="closeButton">
+                <i class="fas fa-times-circle closeIcon"></i>
+              </button>
+              <h3>Wish List</h3>
+            </div>
+            <ul id="buyItems">
+              <h4 class="empty">Your Wish List is empty</h4>
+              <!-- <li class="buyItem">
+                  <img src="Images/producs-images/Mobiles/galaxynote10.png">
+                  <div>
+                    <h5>Products Name</h5>
+                    <h6>$199</h6>
+                    <div>
+                      <button>-</button>
+                      <span class="countOfProduct">1</span>
+                      <button>+</button>
+                    </div>
+                  </div>
+                </li> -->
+            </ul>
+            <button class="btn checkout hidden">Check out</button>
+          </div>
+        </div>
+      </nav>
+    </div>
   </header>
 
   <section id="content">
